cluster-cd/apps/bitty/downloads/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: downloads
  labels:
    # routed-gateway: "true"
    pod-security.kubernetes.io/enforce: privileged
